Fixed spacing again

--- a/app/assets/stylesheets/styles/styles/category-show.scss
+++ b/app/assets/stylesheets/styles/styles/category-show.scss
@@ -22,8 +22,8 @@
 }
 
 .description {
-  padding-left: 2px;
-  padding-right: 2px;
+  margin-left: 13px;
+  margin-right: 13px;
   text-align: center;
   padding-top: 15px;
   font-family: 'Raleway', sans-serif;
